# Tibert-Classical

./: .gitignore  CHANGELOG-2026-03-30.md  CHANGELOG.md  CLAUDE.md  README.md  config.py  main.py  paper.tex  pyproject.toml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AnalysisInput.tsx  CaseParticleGuide.tsx  GrammarPanel.tsx  Header.tsx  StatsCard.tsx  TokenDisplay.tsx
frontend/src/hooks/: useAnalysis.ts  useLearner.ts  useLookup.ts  useRag.ts  useTheme.ts
frontend/src/pages/: AnalyzerPage.tsx  CorpusPage.tsx  LearnerPage.tsx  LookupPage.tsx  RagPage.tsx
frontend/src/stores/: analysisStore.ts
frontend/src/types/: api.ts
scripts/: analyze_tibetan.py  build_rag_index.py  continued_pretrain.py  eval_pos_model.py  eval_pos_model_v2.py  eval_tok_gap.py  extract_corpus.py  extract_rare_tags.py  finetune_qwen_pos.py  gpu_train_watcher.sh  import_dict_to_sqlite.py  learner_corpus_analysis.py  prepare_pos_dataset.py  prepare_pos_dataset_oversample.py  run_pos_inference.py  run_train.sh  test_tibert.py  tokenizer.py  train_pos_classifier.py  train_spm.py  train_tibert.py  train_tibetan_spm.py
src/: __init__.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/api/: dependencies.py  grammar_api.py  models.py  rag.py  rag_server.py  server.py  worker.py
src/cli/: main.py
src/dict/: __init__.py  registry.py  sqlite_lookup.py  stardict.py  verb_lexicon.py
src/ml/: __init__.py  tibert_model.py
