[package]
name = "tibert-classical"
version = "1.0.0"
description = "TiBERT Classical Tibetan NLP Desktop Application"
authors = ["chenhao"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "tibert_classical_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "sync", "time"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
